--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+a:link {color: white;}
 body{ margin:0; padding:0; font-family: Arial, Helvetica, sans-serif; background-color: rgb(136, 171, 245)} 
 
 header{background-color: rgb(2, 73, 226); height: 200px; padding:10px;}
